fix grid align

--- a/src/_includes/main.css
+++ b/src/_includes/main.css
@@ -24,6 +24,7 @@ ul {
 .event {
   display: grid;
   grid-template-columns: max-content 1fr;
+  align-items: start;
   margin-block: 1rem;
   column-gap: 1.5rem;
 }
@@ -54,7 +55,6 @@ ul {
 }
 .event .details {
   grid-column: span 2;
-  margin-top: 0.75rem;
 }
 .event .watch {
   text-align: right;
@@ -66,9 +66,6 @@ ul {
 
 .event .schedule-item {
   margin-block: 1rem;
-}
-.event .schedule-item:first-of-type {
-  margin-top: 0;
 }
 
 .filters {
